gcc/testsuite/rust/rustc/ui/issues/issue-32655.rs
macro_rules! foo (
    () => (
        #[derive_Clone] // { dg-error "" "" { target *-*-* } }
        struct T;
    );
);

macro_rules! bar (
    ($e:item) => ($e)
);

foo!();

bar!(
    #[derive_Clone] // { dg-error "" "" { target *-*-* } }
    struct S;
);

fn main() {}

